--- a/package.json
+++ b/package.json
@@ -6,9 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --config webpack.config.babel.js",
-    "start": "npm run build && electron .",
-    "postinstall": "bash postinstall.sh && mv .env.sample .env",
-    "add-cors": "add-cors-to-couchdb"
+    "start": "npm run build && electron ."
   },
   "author": "James Jeffery",
   "license": "ISC",
@@ -24,8 +22,6 @@
     "electron": "^1.3.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "node-sass": "^3.8.0",
-    "pouchdb": "^5.4.4",
-    "pouchdb-find": "^0.10.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "sass-loader": "^4.0.0",
