--- a/package.json
+++ b/package.json
@@ -1,32 +1,29 @@
 {
-  "name": "neuron",
-  "version": "2.0.2",
+  "name": "kube-flash",
+  "version": "0.0.1",
   "description": "",
-  "main": "app.js",
+  "main": "dist/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.babel.js",
-    "start": "npm run build && electron ."
+    "build": "gulp",
+    "start": "npm run build && electron dist/main.js"
   },
-  "author": "James Jeffery",
-  "license": "ISC",
-  "devDependencies": {
-    "add-cors-to-couchdb": "0.0.6",
-    "babel-cli": "^6.11.4",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "css-loader": "^0.23.1",
-    "dotenv": "^2.0.0",
-    "electron": "^1.3.3",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "node-sass": "^3.8.0",
+  "author": "",
+  "license": "MIT",
+  "dependencies": {
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "systemjs": "^0.19.27"
+  },
+  "devDependencies": {
+    "del": "^2.2.0",
+    "electron-prebuilt": "^1.0.1",
+    "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
+    "gulp-inject": "^4.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.13.4",
+    "run-sequence": "^1.1.5",
+    "typescript": "^2.1.4"
   }
 }
