--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "kube-flash",
-  "version": "0.0.1",
+  "version": "alpha",
   "description": "",
   "main": "dist/main.js",
   "scripts": {
     "build": "gulp",
-    "start": "npm run build && electron dist/main.js"
+    "start": "npm run typings && npm run build && electron dist/main.js",
+    "typings": "./node_modules/typings/dist/bin.js install"
   },
   "author": "",
   "license": "MIT",
@@ -22,8 +23,9 @@
     "gulp-inject": "^4.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^2.13.4",
+    "gulp-typescript": "^3.1.3",
     "run-sequence": "^1.1.5",
-    "typescript": "^2.1.4"
+    "typescript": "^2.1.4",
+    "typings": "^2.0.0"
   }
 }
