--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kube-flash",
-  "version": "alpha",
+  "version": "0.0.1",
   "description": "",
   "main": "dist/main.js",
   "scripts": {
