--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "gulp",
-    "start": "npm run typings && npm run build && electron dist/main.js",
-    "typings": "./node_modules/typings/dist/bin.js install"
+    "start": "npm run build && electron dist/main.js"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@types/react": "^0.14.55",
+    "@types/react-dom": "^0.14.19",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "systemjs": "^0.19.27"
@@ -25,7 +26,6 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-typescript": "^3.1.3",
     "run-sequence": "^1.1.5",
-    "typescript": "^2.1.4",
-    "typings": "^2.0.0"
+    "typescript": "^2.1.4"
   }
 }
