--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,8 +12,6 @@
     "jsx": "react"
   },
   "exclude": [
-    "node_modules",
-    "typings/browser.d.ts",
-    "typings/browser"
+    "node_modules"
   ]
 }
