--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "gulp",
+    "build": "./node_modules/webpack/bin/webpack.js",
     "start": "npm run build && electron dist/main.js"
   },
   "author": "",
@@ -13,19 +13,13 @@
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.19",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "systemjs": "^0.19.27"
+    "react-dom": "^15.3.0"
   },
   "devDependencies": {
-    "del": "^2.2.0",
+    "awesome-typescript-loader": "^3.0.0-beta.17",
     "electron-prebuilt": "^1.0.1",
-    "gulp": "^3.9.1",
-    "gulp-concat": "^2.6.0",
-    "gulp-inject": "^4.0.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-typescript": "^3.1.3",
-    "run-sequence": "^1.1.5",
-    "typescript": "^2.1.4"
+    "source-map-loader": "^0.1.5",
+    "typescript": "^2.1.4",
+    "webpack": "^1.14.0"
   }
 }
