--- a/package.json
+++ b/package.json
@@ -4,22 +4,57 @@
   "description": "",
   "main": "dist/main.js",
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js",
-    "start": "npm run build && electron dist/main.js"
+    "dev": "npm run hot-server -- --start-hot",
+    "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./src/main.js",
+    "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 -r babel-register server.js",
+    "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
+    "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.prod.js --progress --profile --colors",
+    "build": "npm run build-main && npm run build-renderer",
+    "start": "cross-env NODE_ENV=production electron ./app/"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "electron-debug": "^1.1.0",
     "@types/react": "^0.14.55",
     "@types/react-dom": "^0.14.19",
     "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "react-dom": "^15.3.0",
+    "source-map-support": "^0.4.6"
   },
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.17",
-    "electron-prebuilt": "^1.0.1",
+    "babel-core": "^6.20.0",
+    "babel-loader": "^6.2.9",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-dev-expression": "^0.2.1",
+    "babel-plugin-tcomb": "^0.3.24",
+    "babel-plugin-webpack-loaders": "^0.8.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-env": "^1.1.1",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "babel-register": "^6.18.0",
+    "babili-webpack-plugin": "0.0.7",
+    "cross-env": "^3.1.3",
+    "devtron": "^1.4.0",
+    "electron": "^1.4.11",
+    "electron-builder": "^10.6.1",
+    "electron-devtools-installer": "^2.0.1",
+    "express": "^4.14.0",
+    "html-webpack-plugin": "^2.24.1",
+    "minimist": "^1.2.0",
     "source-map-loader": "^0.1.5",
     "typescript": "^2.1.4",
-    "webpack": "^1.14.0"
+    "webpack": "^1.14.0",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.2",
+    "webpack-merge": "^1.0.2",
+    "webpack-validator": "^2.2.11"
+  },
+  "devEngines": {
+    "node": ">=6.x",
+    "npm": ">=3.x"
   }
 }
