--- a/package.json
+++ b/package.json
@@ -1,60 +1,104 @@
 {
-  "name": "kube-flash",
-  "version": "0.0.1",
-  "description": "",
-  "main": "dist/main.js",
-  "scripts": {
-    "dev": "npm run hot-server -- --start-hot",
-    "start-hot": "cross-env HOT=1 NODE_ENV=development electron -r babel-register -r babel-polyfill ./src/main.js",
-    "hot-server": "cross-env NODE_ENV=development node --max_old_space_size=2096 -r babel-register server.js",
-    "build-main": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.electron.js --progress --profile --colors",
-    "build-renderer": "cross-env NODE_ENV=production node -r babel-register ./node_modules/webpack/bin/webpack --config webpack.config.prod.js --progress --profile --colors",
-    "build": "npm run build-main && npm run build-renderer",
-    "start": "cross-env NODE_ENV=production electron ./app/"
+  "name": "typescript-react-webpack",
+  "version": "0.0.0",
+  "description": "typescript / react / redux / electron boilerplate",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/xwvvvvwx/typescript-react-electron-boilerplate"
   },
-  "author": "",
-  "license": "MIT",
-  "dependencies": {
-    "electron-debug": "^1.1.0",
-    "@types/react": "^0.14.55",
-    "@types/react-dom": "^0.14.19",
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "source-map-support": "^0.4.6"
+  "license": "Unlicense",
+  "main": "app/main.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development electron app",
+    "server": "node dev-server.js",
+    "lint-css": "stylelint \"src/**/*.css\"",
+    "lint-ts": "tslint \"src/**/*.ts?(x)\"",
+    "lint": "npm run lint-css && npm run lint-ts",
+    "test": "cross-env NODE_PATH=./src mocha --opts mocha.opts",
+    "test:watch": "npm run test -- --watch",
+    "prepackage": "cross-env NODE_ENV=production webpack",
+    "package": "npm run prepackage && build --dir",
+    "build": "npm run prepackage && build --x64",
+    "build-mac": "npm run prepackage && build --mac --x64",
+    "build-win": "npm run prepackage && build --win --x64",
+    "build-linux": "npm run prepackage && build --linux --x64",
+    "archive-builds": "tar -zcf builds.tar.gz dist/"
+  },
+  "build": {
+    "appId": "org.xwvvvvwx.typescript-boilerplate",
+    "dmg": {
+      "contents": [
+        {
+          "x": 410,
+          "y": 150,
+          "type": "link",
+          "path": "/Applications"
+        },
+        {
+          "x": 130,
+          "y": 150,
+          "type": "file"
+        }
+      ]
+    },
+    "linux": {
+      "target": [
+        "deb",
+        "AppImage"
+      ]
+    },
+    "win": {
+      "target": ["squirrel"]
+    }
+  },
+  "directories": {
+    "buildResources": "install-resources"
   },
   "devDependencies": {
+    "@types/chai": "^3.4.32",
+    "@types/enzyme": "^2.4.32",
+    "@types/expect": "^1.13.29",
+    "@types/mocha": "^2.2.31",
+    "@types/node": "^6.0.38",
+    "@types/react": "^0.14.33",
+    "@types/react-dom": "^0.14.16",
+    "@types/react-redux": "^4.4.31",
     "awesome-typescript-loader": "^3.0.0-beta.17",
-    "babel-core": "^6.20.0",
-    "babel-loader": "^6.2.9",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-dev-expression": "^0.2.1",
-    "babel-plugin-tcomb": "^0.3.24",
-    "babel-plugin-webpack-loaders": "^0.8.0",
-    "babel-polyfill": "^6.20.0",
-    "babel-preset-env": "^1.1.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-react-optimize": "^1.0.1",
-    "babel-register": "^6.18.0",
-    "babili-webpack-plugin": "0.0.7",
+    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
-    "devtron": "^1.4.0",
-    "electron": "^1.4.11",
-    "electron-builder": "^10.6.1",
+    "css-loader": "^0.26.1",
+    "devtron": "^1.3.0",
+    "electron": "^1.3.4",
+    "electron-builder": "^10.9.2",
+    "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.1",
+    "enzyme": "^2.4.1",
     "express": "^4.14.0",
-    "html-webpack-plugin": "^2.24.1",
-    "minimist": "^1.2.0",
-    "source-map-loader": "^0.1.5",
-    "typescript": "^2.1.4",
-    "webpack": "^1.14.0",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.2",
-    "webpack-merge": "^1.0.2",
-    "webpack-validator": "^2.2.11"
+    "html-webpack-plugin": "^2.22.0",
+    "ignore-styles": "^5.0.1",
+    "json-loader": "^0.5.4",
+    "mocha": "^3.0.2",
+    "postcss-cssnext": "^2.8.0",
+    "postcss-loader": "^1.2.1",
+    "postcss-simple-vars": "^3.0.0",
+    "react-addons-test-utils": "^15.3.1",
+    "style-loader": "^0.13.1",
+    "stylelint": "^7.4.0",
+    "stylelint-config-standard": "^15.0.1",
+    "ts-node": "^1.3.0",
+    "tslint": "^4.1.1",
+    "typescript": "^2.0.2",
+    "webpack": "^1.13.2",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-fail-plugin": "^1.0.5",
+    "webpack-hot-middleware": "^2.12.2",
+    "webpack-merge": "^1.1.2",
+    "webpack-notifier": "^1.4.1"
   },
-  "devEngines": {
-    "node": ">=6.x",
-    "npm": ">=3.x"
+  "dependencies": {
+    "react": "^15.3.0",
+    "react-dom": "^15.3.0",
+    "react-redux": "^5.0.1",
+    "redux": "^3.5.2"
   }
 }
