--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "lint-css": "stylelint \"src/**/*.css\"",
     "lint-ts": "tslint \"src/**/*.ts?(x)\"",
     "lint": "npm run lint-css && npm run lint-ts",
-    "test": "cross-env NODE_PATH=./src mocha --opts mocha.opts",
-    "test:watch": "npm run test -- --watch",
     "prepackage": "cross-env NODE_ENV=production webpack",
     "package": "npm run prepackage && build --dir",
     "build": "npm run prepackage && build --x64",
@@ -55,16 +53,10 @@
     "buildResources": "install-resources"
   },
   "devDependencies": {
-    "@types/chai": "^3.4.32",
-    "@types/enzyme": "^2.4.32",
-    "@types/expect": "^1.13.29",
-    "@types/mocha": "^2.2.31",
     "@types/node": "^6.0.38",
     "@types/react": "^0.14.33",
     "@types/react-dom": "^0.14.16",
-    "@types/react-redux": "^4.4.31",
     "awesome-typescript-loader": "^3.0.0-beta.17",
-    "chai": "^3.5.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
     "devtron": "^1.3.0",
@@ -72,20 +64,16 @@
     "electron-builder": "^10.9.2",
     "electron-debug": "^1.0.1",
     "electron-devtools-installer": "^2.0.1",
-    "enzyme": "^2.4.1",
     "express": "^4.14.0",
     "html-webpack-plugin": "^2.22.0",
     "ignore-styles": "^5.0.1",
     "json-loader": "^0.5.4",
-    "mocha": "^3.0.2",
     "postcss-cssnext": "^2.8.0",
     "postcss-loader": "^1.2.1",
     "postcss-simple-vars": "^3.0.0",
-    "react-addons-test-utils": "^15.3.1",
     "style-loader": "^0.13.1",
     "stylelint": "^7.4.0",
     "stylelint-config-standard": "^15.0.1",
-    "ts-node": "^1.3.0",
     "tslint": "^4.1.1",
     "typescript": "^2.0.2",
     "webpack": "^1.13.2",
@@ -97,8 +85,6 @@
   },
   "dependencies": {
     "react": "^15.3.0",
-    "react-dom": "^15.3.0",
-    "react-redux": "^5.0.1",
-    "redux": "^3.5.2"
+    "react-dom": "^15.3.0"
   }
 }
