--- a/package.json
+++ b/package.json
@@ -11,9 +11,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development electron app",
     "server": "node dev-server.js",
-    "lint-css": "stylelint \"src/**/*.css\"",
     "lint-ts": "tslint \"src/**/*.ts?(x)\"",
-    "lint": "npm run lint-css && npm run lint-ts",
+    "lint": "npm run lint-ts",
     "prepackage": "cross-env NODE_ENV=production webpack",
     "package": "npm run prepackage && build --dir",
     "build": "npm run prepackage && build --x64",
@@ -72,8 +71,6 @@
     "postcss-loader": "^1.2.1",
     "postcss-simple-vars": "^3.0.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.4.0",
-    "stylelint-config-standard": "^15.0.1",
     "tslint": "^4.1.1",
     "typescript": "^2.0.2",
     "webpack": "^1.13.2",
