--- a/package.json
+++ b/package.json
@@ -1,87 +1,39 @@
 {
-  "name": "typescript-react-webpack",
-  "version": "0.0.0",
-  "description": "typescript / react / redux / electron boilerplate",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/xwvvvvwx/typescript-react-electron-boilerplate"
-  },
-  "license": "Unlicense",
-  "main": "app/main.js",
+  "name": "electron-react-webpack-hmr-example",
+  "version": "1.0.0",
+  "main": "index.js",
+  "license": "MIT",
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron app",
-    "server": "node dev-server.js",
-    "lint-ts": "tslint \"src/**/*.ts?(x)\"",
-    "lint": "npm run lint-ts",
-    "prepackage": "cross-env NODE_ENV=production webpack",
-    "package": "npm run prepackage && build --dir",
-    "build": "npm run prepackage && build --x64",
-    "build-mac": "npm run prepackage && build --mac --x64",
-    "build-win": "npm run prepackage && build --win --x64",
-    "build-linux": "npm run prepackage && build --linux --x64",
-    "archive-builds": "tar -zcf builds.tar.gz dist/"
-  },
-  "build": {
-    "appId": "org.xwvvvvwx.typescript-boilerplate",
-    "dmg": {
-      "contents": [
-        {
-          "x": 410,
-          "y": 150,
-          "type": "link",
-          "path": "/Applications"
-        },
-        {
-          "x": 130,
-          "y": 150,
-          "type": "file"
-        }
-      ]
-    },
-    "linux": {
-      "target": [
-        "deb",
-        "AppImage"
-      ]
-    },
-    "win": {
-      "target": ["squirrel"]
-    }
-  },
-  "directories": {
-    "buildResources": "install-resources"
-  },
-  "devDependencies": {
-    "@types/node": "^6.0.38",
-    "@types/react": "^0.14.33",
-    "@types/react-dom": "^0.14.16",
-    "awesome-typescript-loader": "^3.0.0-beta.17",
-    "cross-env": "^3.1.3",
-    "css-loader": "^0.26.1",
-    "devtron": "^1.3.0",
-    "electron": "^1.3.4",
-    "electron-builder": "^10.9.2",
-    "electron-debug": "^1.0.1",
-    "electron-devtools-installer": "^2.0.1",
-    "express": "^4.14.0",
-    "html-webpack-plugin": "^2.22.0",
-    "ignore-styles": "^5.0.1",
-    "json-loader": "^0.5.4",
-    "postcss-cssnext": "^2.8.0",
-    "postcss-loader": "^1.2.1",
-    "postcss-simple-vars": "^3.0.0",
-    "style-loader": "^0.13.1",
-    "tslint": "^4.1.1",
-    "typescript": "^2.0.2",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-fail-plugin": "^1.0.5",
-    "webpack-hot-middleware": "^2.12.2",
-    "webpack-merge": "^1.1.2",
-    "webpack-notifier": "^1.4.1"
+    "build": "run-p build:*",
+    "build:main": "cross-env NODE_ENV=production webpack -p --config webpack.config.main.babel.js",
+    "build:renderer": "cross-env NODE_ENV=production webpack -p --config webpack.config.renderer.babel.js",
+    "start": "run-p start:*",
+    "start:main": "electron --require babel-register src/main",
+    "start:renderer": "cross-env NODE_ENV=development webpack-dev-server -d --config webpack.config.renderer.babel.js"
   },
   "dependencies": {
-    "react": "^15.3.0",
-    "react-dom": "^15.3.0"
+    "electron": "^1.4.10",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.8",
+    "babel-plugin-transform-class-properties": "^6.19.0",
+    "babel-plugin-transform-object-rest-spread": "^6.19.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "cross-env": "^3.1.3",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-plugin-import": "^2.1.0",
+    "eslint-plugin-jsx-a11y": "^2.2.3",
+    "eslint-plugin-react": "^6.6.0",
+    "npm-run-all": "^3.1.2",
+    "react-hot-loader": "^3.0.0-beta",
+    "webpack": "^2.1.0-beta",
+    "webpack-dev-server": "^2.1.0-beta"
   }
 }
