--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
   },
   "dependencies": {
     "electron": "^1.4.10",
+    "material-ui": "^0.16.5",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
