--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.6.0",
     "extract-text-webpack-plugin": "^2.0.0-beta",
+    "ipc": "0.0.1",
     "node-sass": "^4.1.1",
     "npm-run-all": "^3.1.2",
     "react-hot-loader": "^3.0.0-beta",
