--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-register": "^6.18.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.26.1",
+    "drivelist": "^5.0.4",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
     "eslint-plugin-import": "^2.1.0",
@@ -38,7 +39,9 @@
     "eslint-plugin-react": "^6.6.0",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "ipc": "0.0.1",
+    "node-df": "^0.1.1",
     "node-sass": "^4.1.1",
+    "node-shell-parser": "^0.2.1",
     "npm-run-all": "^3.1.2",
     "react-hot-loader": "^3.0.0-beta",
     "sass-loader": "^4.1.1",
