--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.16.0",
     "babel-register": "^6.18.0",
     "cross-env": "^3.1.3",
+    "cross-unzip": "^0.1.0",
     "css-loader": "^0.26.1",
     "eslint": "^3.9.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -48,6 +49,7 @@
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta",
-    "webpack-dev-server": "^2.1.0-beta"
+    "webpack-dev-server": "^2.1.0-beta",
+    "win-7zip": "^0.1.0"
   }
 }
