--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "js-yaml": "^3.7.0",
     "lodash": "^4.17.2",
+    "md5-file": "^3.1.1",
     "node-df": "^0.1.1",
     "node-sass": "^4.1.1",
     "node-shell-parser": "^0.2.1",
