--- a/package.json
+++ b/package.json
@@ -49,9 +49,7 @@
     "request-progress": "^3.0.0",
     "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
-    "unzip": "^0.1.11",
     "webpack": "^2.1.0-beta",
-    "webpack-dev-server": "^2.1.0-beta",
-    "win-7zip": "^0.1.0"
+    "webpack-dev-server": "^2.1.0-beta"
   }
 }
