--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.6.0",
+    "etcher-image-write": "^9.0.0",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "js-yaml": "^3.7.0",
     "lodash": "^4.17.2",
@@ -47,7 +48,9 @@
     "npm-run-all": "^3.1.2",
     "react-hot-loader": "^3.0.0-beta",
     "request-progress": "^3.0.0",
+    "resin-image-write": "^4.0.2",
     "sass-loader": "^4.1.1",
+    "strip-ansi": "^3.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^2.1.0-beta",
     "webpack-dev-server": "^2.1.0-beta"
