--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "node-df": "^0.1.1",
     "node-sass": "^4.1.1",
     "node-shell-parser": "^0.2.1",
-    "npm-run-all": "^3.1.2",
+    "npm-run-all": "^4.0.0",
+    "pretty-bytes": "^4.0.2",
     "request-progress": "^3.0.0",
     "strip-ansi": "^3.0.1"
   }
