--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "bootstrap.js",
   "license": "MIT",
   "scripts": {
+    "format": "./node_modules/eslint/bin/eslint.js \"src/**/*.js\" --fix",
     "start": "electron src/electron.js"
   },
   "dependencies": {
@@ -20,6 +21,14 @@
     "babel-register": "^6.18.0",
     "cross-env": "^3.1.3",
     "drivelist": "^5.0.5",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-config-standard": "^6.2.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-react": "^6.9.0",
+    "eslint-plugin-standard": "^2.0.1",
     "etcher-image-write": "^9.0.0",
     "js-yaml": "^3.7.0",
     "lodash": "^4.17.2",
