--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.0.0",
     "pretty-bytes": "^4.0.2",
     "request-progress": "^3.0.0",
-    "strip-ansi": "^3.0.1"
+    "strip-ansi": "^3.0.1",
+    "umount": "^1.1.5"
   }
 }
