--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pretty-bytes": "^4.0.2",
     "request-progress": "^3.0.0",
     "strip-ansi": "^3.0.1",
-    "umount": "^1.1.5"
+    "umount": "^1.1.5",
+    "write-yaml": "^0.2.2"
   }
 }
