--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "request-progress": "^3.0.0",
     "strip-ansi": "^3.0.1",
     "umount": "^1.1.5",
-    "write-yaml": "^0.2.2"
+    "yamljs": "^0.2.8"
   }
 }
